# algorithm-practice

./: README.md  algorithm-practice.cabal  algorithms.cabal
app/: Main.hs  SortBenchmark.hs
src/: BinarySearchTree.hs  LinkedList.hs  MaxHeap.hs  MinHeap.hs  Select.hs  Sort.hs
test/: LinkedListSpec.hs  SelectSpec.hs  SortSpec.hs  Spec.hs
