name:                algorithm-practice
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/felix-clark/algorithm-practice#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Sort
                     , LinkedList
                     , BinarySearchTree
                     , MaxHeap
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

executable algorithm-practice-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , algorithm-practice
  default-language:    Haskell2010

test-suite algorithm-practice-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , algorithm-practice
                     , hspec
                     , hspec-discover 
                     -- hspec can be further used to auto-discover tests for each module, see:
                     -- https://stackoverflow.com/questions/43263965/how-to-run-multiple-test-files-with-haskell-stack-project
  other-modules:       SortSpec
                     , LinkedListSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/felix-clark/algorithm-practice
